--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
       const correctCode = "23GB11";
       const input = document.getElementById("codeInput").value;
       if (input === correctCode) {
-        window.location.href = "home.html"; // Replace with your real homepage file
+        window.location.href = "home.html";
       } else {
         document.getElementById("errorMessage").textContent = "❌ Incorrect code. Try again.";
       }
