--- a/home.html
+++ b/home.html
@@ -45,6 +45,16 @@
       font-size: 0.9rem;
       color: #777;
     }
+    .button-link {
+      display: inline-block;
+      margin: 1rem 0.5rem;
+      padding: 10px 20px;
+      background-color: #2196f3;
+      color: white;
+      border-radius: 5px;
+      text-decoration: none;
+      font-weight: bold;
+    }
   </style>
 </head>
 <body>
@@ -56,8 +66,8 @@
 
   <nav>
     <a href="#">Home</a>
-    <a href="#">Subjects</a>
-    <a href="#">Quizzes</a>
+    <a href="quiz.html">Quiz</a>
+    <a href="leaderboard.html">Leaderboard</a>
     <a href="#">Study Tips</a>
     <a href="#">Contact</a>
   </nav>
@@ -72,8 +82,9 @@
       <p>Play interactive quizzes and games that make studying fun.</p>
     </div>
     <div class="card">
-      <h2>💡 Study Tip</h2>
-      <p>Revise in short bursts (25 mins + 5 min break) – it's called the Pomodoro technique!</p>
+      <h2>🚀 Quick Access</h2>
+      <a class="button-link" href="quiz.html">🧠 Take Today's Quiz</a>
+      <a class="button-link" href="leaderboard.html">🏆 See Leaderboard</a>
     </div>
   </main>
 
