--- a/home.html
+++ b/home.html
@@ -59,7 +59,13 @@
 </head>
 <body>
 
+  
   <header>
+    <img src="triple_quarter_logo_small.png" alt="Triple Quarter Logo" style="height:40px; vertical-align: middle;">
+    <h1 style="display:inline-block; margin-left:10px;">Welcome to Triple Quarter</h1>
+    <p>Your Smart Learning Zone 🎓</p>
+  </header>
+
     <h1>Welcome to Triple Quarter</h1>
     <p>Your Smart Learning Zone 🎓</p>
   </header>
