--- a/quiz.html
+++ b/quiz.html
@@ -12,7 +12,8 @@
       display: flex;
       justify-content: center;
       align-items: center;
-      height: 100vh;
+      flex-direction: column;
+      min-height: 100vh;
     }
     .quiz-box {
       background: white;
@@ -21,6 +22,7 @@
       box-shadow: 0 4px 12px rgba(0,0,0,0.1);
       max-width: 500px;
       width: 100%;
+      margin-bottom: 2rem;
     }
     .question {
       font-size: 1.2rem;
@@ -44,6 +46,19 @@
       margin-top: 1rem;
       font-weight: bold;
     }
+    .quiz-button {
+      display: inline-block;
+      background-color: #4caf50;
+      color: white;
+      padding: 12px 20px;
+      border-radius: 8px;
+      text-decoration: none;
+      font-weight: bold;
+      transition: background 0.3s ease;
+    }
+    .quiz-button:hover {
+      background-color: #388e3c;
+    }
   </style>
 </head>
 <body>
@@ -52,6 +67,17 @@
     <div class="options" id="options"></div>
     <div id="result"></div>
   </div>
+
+  <section id="learning-games">
+    <h2>🎮 Learning Games</h2>
+    <div class="game-category">
+      <h3>🧮 Mathematics</h3>
+      <p>Play and learn with JoinMyQuiz!</p>
+      <a href="https://quizizz.com/join/820531" class="quiz-button" target="_blank">
+        🧠 Take Maths Quiz 1 – Code: 820531
+      </a>
+    </div>
+  </section>
 
   <script>
     const quiz = [
