--- a/quiz.html
+++ b/quiz.html
@@ -73,8 +73,8 @@
     <div class="game-category">
       <h3>🧮 Mathematics</h3>
       <p>Play and learn with JoinMyQuiz!</p>
-      <a href="https://quizizz.com/join?code=157456" class="quiz-button" target="_blank">
-        🧠 Take Maths Quiz 1 – Code: 157456
+      <a href="https://wayground.com/join?gc=33281564" class="quiz-button" target="_blank">
+        🧠 Take Maths Quiz 1 – Code: 33281564 (Available until 11 July 2025)
       </a>
     </div>
   </section>
