--- a/quiz.html
+++ b/quiz.html
@@ -6,7 +6,6 @@
   <style>
     body {
       font-family: Arial, sans-serif;
-      background: #f0f4f8;
       margin: 0;
       padding: 0;
       display: flex;
@@ -14,6 +13,8 @@
       align-items: center;
       flex-direction: column;
       min-height: 100vh;
+      background: linear-gradient(135deg, #f3ec78, #af4261);
+      background-image: url('https://www.transparenttextures.com/patterns/symphony.png');
     }
     .quiz-box {
       background: white;
