--- a/quiz.html
+++ b/quiz.html
@@ -14,52 +14,39 @@
       flex-direction: column;
       min-height: 100vh;
       background: linear-gradient(135deg, #f3ec78, #af4261);
-      background-image: url('https://www.transparenttextures.com/patterns/symphony.png');
+      background-size: 400% 400%;
+      animation: gradientGlow 60s ease infinite;
+    }
+    @keyframes gradientGlow {
+      0% { background: linear-gradient(135deg, #f3ec78, #af4261); }
+      25% { background: linear-gradient(135deg, #af4261, #42a5f5); }
+      50% { background: linear-gradient(135deg, #42a5f5, #66bb6a); }
+      75% { background: linear-gradient(135deg, #66bb6a, #ff7043); }
+      100% { background: linear-gradient(135deg, #f3ec78, #af4261); }
     }
     .quiz-box {
       background: white;
       padding: 2rem;
       border-radius: 10px;
-      box-shadow: 0 4px 12px rgba(0,0,0,0.1);
+      box-shadow: 0 0 30px rgba(255, 255, 255, 0.5);
       max-width: 500px;
       width: 100%;
       margin-bottom: 2rem;
     }
-    .question {
-      font-size: 1.2rem;
-      margin-bottom: 1rem;
-    }
+    .question { font-size: 1.2rem; margin-bottom: 1rem; }
     .options button {
-      display: block;
-      width: 100%;
-      margin: 0.5rem 0;
-      padding: 10px;
-      background-color: #2196f3;
-      color: white;
-      border: none;
-      border-radius: 5px;
-      cursor: pointer;
+      display: block; width: 100%; margin: 0.5rem 0;
+      padding: 10px; background-color: #2196f3; color: white;
+      border: none; border-radius: 5px; cursor: pointer;
     }
-    .options button:hover {
-      background-color: #1976d2;
-    }
-    #result {
-      margin-top: 1rem;
-      font-weight: bold;
-    }
+    .options button:hover { background-color: #1976d2; }
+    #result { margin-top: 1rem; font-weight: bold; }
     .quiz-button {
-      display: inline-block;
-      background-color: #4caf50;
-      color: white;
-      padding: 12px 20px;
-      border-radius: 8px;
-      text-decoration: none;
-      font-weight: bold;
-      transition: background 0.3s ease;
+      display: inline-block; background-color: #4caf50; color: white;
+      padding: 12px 20px; border-radius: 8px; text-decoration: none;
+      font-weight: bold; transition: background 0.3s ease;
     }
-    .quiz-button:hover {
-      background-color: #388e3c;
-    }
+    .quiz-button:hover { background-color: #388e3c; }
   </style>
 </head>
 <body>
