--- a/home.html
+++ b/home.html
@@ -8,8 +8,17 @@
       font-family: 'Segoe UI', sans-serif;
       margin: 0;
       padding: 0;
-      background: #f5f7fa;
+      background: linear-gradient(135deg, #f3ec78, #af4261);
+      background-size: 400% 400%;
+      animation: gradientGlow 60s ease infinite;
       color: #333;
+    }
+    @keyframes gradientGlow {
+      0% { background: linear-gradient(135deg, #f3ec78, #af4261); }
+      25% { background: linear-gradient(135deg, #af4261, #42a5f5); }
+      50% { background: linear-gradient(135deg, #42a5f5, #66bb6a); }
+      75% { background: linear-gradient(135deg, #66bb6a, #ff7043); }
+      100% { background: linear-gradient(135deg, #f3ec78, #af4261); }
     }
     header {
       background: #2196f3;
@@ -59,14 +68,9 @@
 </head>
 <body>
 
-  
   <header>
     <img src="triple_quarter_logo_small.png" alt="Triple Quarter Logo" style="height:40px; vertical-align: middle;">
     <h1 style="display:inline-block; margin-left:10px;">Welcome to Triple Quarter</h1>
-    <p>Your Smart Learning Zone 🎓</p>
-  </header>
-
-    <h1>Welcome to Triple Quarter</h1>
     <p>Your Smart Learning Zone 🎓</p>
   </header>
 
