--- a/home.html
+++ b/home.html
@@ -75,11 +75,10 @@
   </header>
 
   <nav>
-    <a href="#">Home</a>
+    <a href="home.html">Home</a>
     <a href="quiz.html">Quiz</a>
     <a href="leaderboard.html">Leaderboard</a>
-    <a href="#">Study Tips</a>
-    <a href="#">Contact</a>
+    <a href="account.html">Account</a>
   </nav>
 
   <main>
