--- a/home.html
+++ b/home.html
@@ -8,17 +8,8 @@
       font-family: 'Segoe UI', sans-serif;
       margin: 0;
       padding: 0;
-      background: linear-gradient(135deg, #f3ec78, #af4261);
-      background-size: 400% 400%;
-      animation: gradientGlow 60s ease infinite;
+      background: #f5f7fa;
       color: #333;
-    }
-    @keyframes gradientGlow {
-      0% { background: linear-gradient(135deg, #f3ec78, #af4261); }
-      25% { background: linear-gradient(135deg, #af4261, #42a5f5); }
-      50% { background: linear-gradient(135deg, #42a5f5, #66bb6a); }
-      75% { background: linear-gradient(135deg, #66bb6a, #ff7043); }
-      100% { background: linear-gradient(135deg, #f3ec78, #af4261); }
     }
     header {
       background: #2196f3;
@@ -68,17 +59,23 @@
 </head>
 <body>
 
+  
   <header>
     <img src="triple_quarter_logo_small.png" alt="Triple Quarter Logo" style="height:40px; vertical-align: middle;">
     <h1 style="display:inline-block; margin-left:10px;">Welcome to Triple Quarter</h1>
     <p>Your Smart Learning Zone 🎓</p>
   </header>
 
+    <h1>Welcome to Triple Quarter</h1>
+    <p>Your Smart Learning Zone 🎓</p>
+  </header>
+
   <nav>
-    <a href="home.html">Home</a>
+    <a href="#">Home</a>
     <a href="quiz.html">Quiz</a>
     <a href="leaderboard.html">Leaderboard</a>
-    <a href="account.html">Account</a>
+    <a href="#">Study Tips</a>
+    <a href="#">Contact</a>
   </nav>
 
   <main>
