--- a/home.html
+++ b/home.html
@@ -91,6 +91,7 @@
       <h2>🚀 Quick Access</h2>
       <a class="button-link" href="quiz.html">🧠 Take Today's Quiz</a>
       <a class="button-link" href="leaderboard.html">🏆 See Leaderboard</a>
+      <a class="button-link" href="riddles.html">🏆 Take Today's Riddle!</a>
     </div>
   </main>
 
