--- a/home.html
+++ b/home.html
@@ -74,6 +74,7 @@
     <a href="#">Home</a>
     <a href="quiz.html">Quiz</a>
     <a href="leaderboard.html">Leaderboard</a>
+    <a href="riddles.html">Leaderboard</a>
     <a href="#">Study Tips</a>
     <a href="#">Contact</a>
   </nav>
@@ -91,7 +92,7 @@
       <h2>🚀 Quick Access</h2>
       <a class="button-link" href="quiz.html">🧠 Take Today's Quiz</a>
       <a class="button-link" href="leaderboard.html">🏆 See Leaderboard</a>
-      <a class="button-link" href="riddles.html">🏆 Take Today's Riddle!</a>
+      <a class="button-link" href="riddles.html">🧐  Take Today's Riddle!</a>
     </div>
   </main>
 
