--- a/home.html
+++ b/home.html
@@ -74,7 +74,7 @@
     <a href="#">Home</a>
     <a href="quiz.html">Quiz</a>
     <a href="leaderboard.html">Leaderboard</a>
-    <a href="riddles.html">Leaderboard</a>
+    <a href="riddles.html">Riddles</a>
     <a href="#">Study Tips</a>
     <a href="#">Contact</a>
   </nav>
